--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 opencv-python
 mediapipe
 openai
-whisper
+openai-whisper
 torch
 torchaudio
 numpy
@@ -16,3 +16,5 @@ ultralytics
 pyliblzma
 ultralytics
 timm
+pyaudio
+python-dotenv
